--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ copy的话切记将 JS、CSS 和图片等外部资源文件都保存到你自己
                     <a class="zocial gmail" href="mailto:shurrik.dly@gmail.com" target="_blank"></a>
 				</div>
 				<div class="blog">
-					<a href="http://ixjx.coding.me/blog" target="_blank">进入我的博客</a>
+					<a href="http://ixjx.github.io/blog" target="_blank">进入我的博客</a>
 				</div>
 			</article>
 		</section>
