--- a/dora/index.html
+++ b/dora/index.html
@@ -7,7 +7,7 @@
 		overflow: hidden;
 	}
 	#canvas {
-		background: url('http://shurriklab.qiniudn.com/QQ%E5%9B%BE%E7%89%8720160626004521.png') repeat 0 0;
+		background: url('http://shurriklab.qiniudn.com/psdora.png') repeat 0 0;
 		border: none;
 		cursor: pointer;
 		display: none;
