--- a/dora/index.html
+++ b/dora/index.html
@@ -1,5 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
+<!--
+ _____    _____       ___   _____        _   _   _____   _____    _____  
+|  _  \  | ____|     /   | |  _  \      | | | | | ____| |  _  \  | ____| 
+| |_| |  | |__      / /| | | | | |      | |_| | | |__   | |_| |  | |__   
+|  _  /  |  __|    / / | | | | | |      |  _  | |  __|  |  _  /  |  __|  
+| | \ \  | |___   / /  | | | |_| |      | | | | | |___  | | \ \  | |___  
+|_|  \_\ |_____| /_/   |_| |_____/      |_| |_| |_____| |_|  \_\ |_____| 
+
+Dear Dora：
+Happy birthday first!
+页面简陋了点，但我还是花了不少心思，嘿嘿。
+虽然这是我第一次为你过生日，但我希望以后每年都是我陪你过生日，好吗？
+当然不准说不好啦，生日快乐亲爱的，愿你在新的一年快快乐乐，考试也能有一个完美的结果~
+过去的这一年我觉得很幸福，感谢有你，你也得感谢有我~
+等你什么时候觉得可以了，我就带你见我父母好么，不好？那你带我见你父母呗^_^
+-->
 <meta charset="utf-8">
+<head>
 <style type="text/css">
 	html, body {
 		padding: 0;
@@ -23,10 +40,13 @@
 		background-image: url(./dora.jpg);
 	}	
 </style>
-<div class="sticker"></div>
-<canvas id="canvas" width="1000" height="500">
-	using the fucking chrome!
-</canvas>
+</head>
+<body>
+	<div class="sticker"></div>
+	<canvas id="canvas" width="1000" height="500">
+		using the fucking chrome!
+	</canvas>
+</body>
 <script src="lib/utils.js"></script>
 <script src="lib/ball.js"></script>
 <script src="lib/birt.js"></script>
