--- a/dora/index.html
+++ b/dora/index.html
@@ -10,10 +10,15 @@
 Dear Dora：
 Happy birthday first!
 页面简陋了点，但我还是花了不少心思，嘿嘿。
-虽然这是我第一次为你过生日，但我希望以后每年都是我陪你过生日，好吗？
-当然不准说不好啦，生日快乐亲爱的，愿你在新的一年快快乐乐，考试也能有一个完美的结果~
-过去的这一年我觉得很幸福，感谢有你，你也得感谢有我~
-等你什么时候觉得可以了，我就带你见我父母好么，不好？那你带我见你父母呗^_^
+虽然这是我第一次为你过生日，但希望以后每年都有我陪你过生日，好吗？
+如果要加上一个期限，我希望是一辈子。
+愿你在新的一年快快乐乐，考试也能有一个完美的结果~
+过去的这一年有你的陪伴我觉得很幸福，感谢有你，你也得感谢有我^_^
+最后，我告诉你一件事。我很想有一个自己的家，里面有一张很大的书桌，
+但是如果没有无所谓。我还想有一张很舒服的沙发，但是如果没有无所谓。
+如果在家里面，有两个天真活泼的小孩子跑来跑去，我会很开心，但是如果没有也无所谓。
+最重要的是，这个家有你，其他有没有无所谓......我要你知道，我心里是怎么想的，
+在不远的将来，我一定会娶你，问题是，你愿不愿意嫁给我？
 -->
 <meta charset="utf-8">
 <head>
@@ -42,7 +47,7 @@ Happy birthday first!
 </style>
 </head>
 <body>
-	<div class="sticker"></div>
+	<!--<div class="sticker"></div> -->
 	<canvas id="canvas" width="1000" height="500">
 		using the fucking chrome!
 	</canvas>
