--- a/dora/index.html
+++ b/dora/index.html
@@ -17,8 +17,7 @@ Happy birthday first!
 最后，我告诉你一件事。我很想有一个自己的家，里面有一张很大的书桌，
 但是如果没有无所谓。我还想有一张很舒服的沙发，但是如果没有无所谓。
 如果在家里面，有两个天真活泼的小孩子跑来跑去，我会很开心，但是如果没有也无所谓。
-最重要的是，这个家有你，其他有没有无所谓......我要你知道，我心里是怎么想的，
-在不远的将来，我一定会娶你，问题是，你愿不愿意嫁给我？
+最重要的是这个家有你，虽然小，但是有你就很温馨，其他有没有无所谓......我要你知道，我心里是这么想的。
 -->
 <meta charset="utf-8">
 <head>
