--- a/dora/birth.html
+++ b/dora/birth.html
@@ -21,6 +21,7 @@ Happy birthday first!
 -->
 <meta charset="utf-8">
 <head>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 <style type="text/css">
 	html, body {
 		padding: 0;
