--- a/dora/index.html
+++ b/dora/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />    
     <title>Dora&Shurrik</title>
-    
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link rel="stylesheet" type="text/css" href="css/scrollbar.css">
 
