--- a/dora/index.html
+++ b/dora/index.html
@@ -32,7 +32,7 @@
 						<ul class='page'>
 							<li></li>
 							<li>
-								<a class="btn" href="youeryuan" target="_blank">查看</a>
+								<a class="btn" href="youeryuan/index.html" target="_blank">查看</a>
 							</li>
 							<li></li>
 							<li></li>
