--- a/dora/youeryuan/index.html
+++ b/dora/youeryuan/index.html
@@ -88,7 +88,7 @@
 	</div>
 
 	<!-- 播放结束弹窗 -->
-	<div id="afterView" class="none">
+	<div id="afterView" class="none" style="display:none">
 		<div id="afterViewBtns" class="clearfix">
 			<a id="view_toFirst" href="#step=1"><span class="iconToFirst"></span>重播</a>
 			<a id="view_share_b" class="jiathis jiathis_txt jtico jtico_jiathis disabled" href="javascript:;"><span class="iconShareBig"></span>分享</a>
