--- a/dora/birth.html
+++ b/dora/birth.html
@@ -10,7 +10,7 @@
 Dear Dora：
 Happy birthday first!
 页面简陋了点，但我还是花了不少心思，嘿嘿。
-虽然这是我第一次为你过生日，但希望以后每年都有我陪你过生日，好吗？
+虽然这是我第一次为你过生日，但希望以后每年都有我陪你过生日。
 如果要加上一个期限，我希望是一辈子。
 愿你在新的一年快快乐乐，考试也能有一个完美的结果~
 过去的这一年有你的陪伴我觉得很幸福，感谢有你，你也得感谢有我^_^
