--- a/dora/index.html
+++ b/dora/index.html
@@ -32,7 +32,7 @@
 						<ul class='page'>
 							<li></li>
 							<li>
-								<a class="btn" href="youeryuan/index.html" target="_blank">查看</a>
+								<a class="btn" href="youeryuan/play.html" target="_blank">打开</a>
 							</li>
 							<li></li>
 							<li></li>
@@ -70,7 +70,7 @@
 						<ul class='page'>
 							<li></li>
 							<li>
-								<a class="btn" href="img/3.jpg" target="_blank">查看</a>
+								<a class="btn" href="xacd/play.html" target="_blank">打开</a>
 							</li>
 							<li></li>
 							<li></li>
@@ -86,51 +86,15 @@
 							<li></li>
 						</ul>
 						<figcaption>
-							<h1>西安</h1>
-							<span>2016.7.13</span>
+							<h1>西安 ·成都</h1>
+							<span>2016.7-2016.9</span>
 							<p>我爱这个城市</p>
 							<p>我爱我的生活</p>
 							<p>我爱你</p>
 						</figcaption>
 					</figure>
 				</li>
-				
-				<li>
-					<figure class='book'>
-					<!-- Front -->
-						<ul class='hardcover_front'>
-							<li>
-								<img src="img/5.jpg" alt="" width="100%" height="100%">
-							</li>
-							<li></li>
-						</ul>
-					<!-- Pages -->
-						<ul class='page'>
-							<li></li>
-							<li>
-								<a class="btn" href="img/5.jpg" target="_blank">查看</a>
-							</li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					<!-- Back -->
-						<ul class='hardcover_back'>
-							<li></li>
-							<li></li>
-						</ul>
-						<ul class='book_spine'>
-							<li></li>
-							<li></li>
-						</ul>
-						<figcaption>
-							<h1>成都·五月天</h1>
-							<span>2016.9.10</span>
-							<p>第一次和喜欢的人一起听演唱会</p>
-							<p>感谢五月天的歌</p>
-						</figcaption>
-					</figure>
-				</li>
+							
 				<!--Begin -->
 				<li>
 					<figure class='book'>
@@ -145,7 +109,7 @@
 						<ul class='page'>
 							<li></li>
 							<li>
-								<a class="btn" href="img/6.jpg" target="_blank">查看</a>
+								<a class="btn" href="xiezhen/play.html" target="_blank">打开</a>
 							</li>
 							<li></li>
 							<li></li>
@@ -163,7 +127,7 @@
 						<figcaption>
 							<h1>写真</h1>
 							<span>2016.9.17</span>
-							<p>还是可爱风最适合你</p>
+							<p>好看惨了</p>
 						</figcaption>
 					</figure>
 				</li>
@@ -183,7 +147,7 @@
 						<ul class='page'>
 							<li></li>
 							<li>
-								<a class="btn" href="birth.html">查看</a>
+								<a class="btn" href="birth.html">打开</a>
 							</li>
 							<li></li>
 							<li></li>
