--- a/resume/index.html
+++ b/resume/index.html
@@ -51,7 +51,7 @@
                     <li>
                         <label class="left-label">个人主页</label><span class="label-value">https://ixjx.github.io</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ixjx</span></li>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/ixjx</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
