--- a/resume/index.html
+++ b/resume/index.html
@@ -49,9 +49,9 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">vissky1@163.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">https://ixjx.github.io</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">ixjx.github.io</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">https://github.com/ixjx</span></li>
+                        <label class="left-label">Github</label><span class="label-value">github.com/ixjx</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
