--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DeerResume</title>
+  <title>个人简历</title>
   <link href="image/browser.png" rel="shortcut icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/yue.css">
