--- a/resume_old/index.html
+++ b/resume_old/index.html
@@ -172,23 +172,17 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>小学生作文二等奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>重庆有线电视网络有限公司第六届员工技能竞赛一等奖</h3>
                     </li> 
                     <li>
-                        <h3>曾获统一冰红茶“再来一瓶”奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>2014年中国技能大赛--"广达杯"第一届全国有线电视职业技能竞赛决赛优秀奖</h3>
                     </li> 
                     <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>                     
+                        <h3>2015年华为NE路由器工程师培训证书</h3>
+                    </li>
+                    <li>
+                        <h3>2017年Casa CMTS Configuration and Troubleshooting证书</h3>
+                    </li>                                          
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
