--- a/resume_old/index.html
+++ b/resume_old/index.html
@@ -49,17 +49,17 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">vissky1@163.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">ixjx.github.io</span></li>
+                        <label class="left-label">个人网站</label><span class="label-value">https://ixjx.github.io</span></li>
                     <li>
                         <label class="left-label">Github</label><span class="label-value">github.com/ixjx</span></li>
                 </ul>
             </div>
-            <div class="skill info-unit">
+ 		<!--<div class="skill info-unit">
                 <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
+                        <label class="left-label">Linux</label>
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
@@ -75,19 +75,22 @@
                         <progress value="60" max="100"></progress>
                     </li>
                 </ul>
-            </div>
+            </div>  -->
             <div class="stack info-unit">
                 <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">1.</label><span class="label-value">熟悉主流Linux系统，掌握linux下各种命令，熟练使用shell脚本</span>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">2.</label><span class="label-value">熟悉常用思科、华为、华三等网络设备的配置维护，具有多年系统管理/网络/故障排除经验</span>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">3.</label><span class="label-value">熟悉虚拟化技术VMware、KVM，云计算openstack、Docker、k8s等相关技术</span>
+                    </li>
+                    <li>
+                    	<label class="left-label">4.</label><span class="label-value">熟悉前端H5、CSS、js等网站开发技术，熟悉后端node，数据库MYSQL、MongoDB等相关技术</span>
                     </li>
                 </ul>
             </div>
@@ -113,10 +116,8 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
+                        <h3>电子科技大学 - 网络工程专业 (2009-2013)</h3>
+                        
                     </li>
                 </ul>
             </div>
@@ -125,13 +126,8 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>实验楼－课程内容（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h3>重庆有线电视网络有限公司——系统工程师 (2013年7月~至今)</h3>
+                        <p>主要负责公司网络支撑系统服务器、存储、网络等设备的规划、建设、配置、维护、故障处理等工作
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -141,28 +137,21 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>基于 Qt 5 的文本编辑器</h3>
+                        <h3>BCC DHCP项目</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            <br/>
+                        项目主要是用BCC替换掉原cisco CNR系统，BCC基于VMware ESXi虚拟平台Centos7操作系统，作为主要实施人，我完成了整个系统架构、网络规划、系统配置、业务割接等工作。并完成了BCC系统部署的标准化流程，以便大规模部署。在该系统上线后，DHCP性能经压力测试提升5倍以上，服务器虚拟机由122台减少到20台，承载了整个重庆有线近400W租约。在后期我还针对BCC搭建了一套cacti监控系统，实现自动化监控，自动化运维。
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Flask 的主机监视系统</h3>
+                        <h3>WAG WLAN项目</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        项目针对公司原WLAN业务无实名认证，WAG通过建立GRE隧道与AP通信，同时采用TR069协议自动给AP下发配置，终端通过短信认证的方式实现实名认证。WAG基于NFV架构，采用KVM虚拟平台，转发与控制平面分离，采用1+1热备做HA，单台x86服务器能承载1W AP和10W用户。作为项目负责人，我完成了整个系统架构、网络规划、系统配置，以及测试验证和业务割接等工作。系统上线后满足了网监实名认证、审计的要求，帮助公司顺利发展WLAN业务。
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
+                        <h3>vBNG项目</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>如果项目太少，可以在实验楼上找项目做啊:D</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        项目针对原cisco ASR9010性能瓶颈，采用Juniper vBNG部署方式，同样基于NFV架构，单台x86服务器的KVM环境中创建了2个vBNG实例，分别对应2台独立的vBNG。每个vBNG实例包含控制面（vCP）和转发面（vFP）2个不同的虚拟机。为了提高网络可靠性，采用N+1热备方式，备机通过对其设置PADO延时，当出现单台x86服务器宕机时，用户能够迅速切换至备用vBNG上，实现实时保护。系统上线后2台服务器共承载10W PPPOE拨号用户，有效缓解了ASR9010压力。同时该项目目前为国内最大vBNG部署案例。
                         </p>
                     </li>
                 </ul>
@@ -172,16 +161,16 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>重庆有线电视网络有限公司第六届员工技能竞赛一等奖</h3>
+                        <h3>2014年重庆有线电视网络有限公司第六届员工技能竞赛一等奖</h3>
                     </li> 
                     <li>
-                        <h3>2014年中国技能大赛--"广达杯"第一届全国有线电视职业技能竞赛决赛优秀奖</h3>
+                        <h3>2014年中国技能大赛--第一届全国有线电视职业技能竞赛决赛三等奖</h3>
                     </li> 
                     <li>
-                        <h3>2015年华为NE路由器工程师培训证书</h3>
+                        <h3>华为NE路由器工程师认证证书</h3>
                     </li>
                     <li>
-                        <h3>2017年Casa CMTS Configuration and Troubleshooting证书</h3>
+                        <h3>Casa CMTS Configuration and Troubleshooting认证证书</h3>
                     </li>                                          
             </div>
             <div class="aboutme info-unit right-paragraph">
