--- a/resume_old/index.html
+++ b/resume_old/index.html
@@ -90,7 +90,7 @@
                         <label class="left-label">3.</label><span class="label-value">熟悉虚拟化技术VMware、KVM，云计算openstack、Docker、k8s等相关技术</span>
                     </li>
                     <li>
-                    	<label class="left-label">4.</label><span class="label-value">熟悉前端H5、CSS、js等网站开发技术，熟悉后端node，数据库MYSQL、MongoDB等相关技术</span>
+                    	<label class="left-label">4.</label><span class="label-value">熟悉前端H5、CSS、js等网站开发技术，熟悉后端node，Apache，Nginx，Caddy，数据库MYSQL、MongoDB等相关技术</span>
                     </li>
                 </ul>
             </div>
@@ -160,9 +160,6 @@
                 <h2 class="info-header"><i class="iconfont icon-trophy"></i> <span class="info-title">奖项与证书</span></h2>
                 <hr>
                 <ul class="experience-list">
-                    <li>
-                        <h3>2014年重庆有线电视网络有限公司第六届员工技能竞赛一等奖</h3>
-                    </li> 
                     <li>
                         <h3>2014年中国技能大赛--第一届全国有线电视职业技能竞赛决赛三等奖</h3>
                     </li> 
