--- a/index.html
+++ b/index.html
@@ -107,10 +107,21 @@ copy的话切记将 JS、CSS 和图片等外部资源文件都保存到你自己
 					<span class="point"></span>
 					<span>各种宅</span>
 					<span class="point"></span>
-					<span>喜搬砖</span> -->
-					<span>沉稳内敛,低调前行</span>
-					<span class="point"></span>
-					<span>这里是shurrik的堡垒</span>
+					<span>喜搬砖</span>
+					<span>沉稳内敛,低调前行</span>					
+					<span>这里是shurrik的堡垒</span> -->
+					<span id="typed"></span>
+					<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+					<script>
+						var typed = new Typed("#typed", {
+							strings: ['沉稳内敛,低调前行 <span class="point"></span> 这里是shurrik的堡垒'],
+							startDelay: 300,
+							typeSpeed: 100,
+							loop: true,
+							backSpeed: 50,
+							showCursor: true
+						});
+					</script>
 				</p>
 			</article>
 		</section>
