--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ copy的话切记将 JS、CSS 和图片等外部资源文件都保存到你自己
 				</header>
 				<div class="content">
 	                <section class="emacs">
-	                    <h3 class="title">神之编辑器 -- Emacs</h3>
-	                    <img src="https://raw.githubusercontent.com/ixjx/ixjx.github.io/master/img/emacs.png" alt="Emacs" />
+	                    <h3 class="title">神之编辑器 -- VS Code</h3>
+	                    <img src="https://raw.githubusercontent.com/ixjx/ixjx.github.io/master/img/vscode.png" alt="VScode" />
 	                </section>
 	                <section class="vim">
 	                    <h3 class="title">编辑器之神  -- Vim</h3>
