--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="google" value="notranslate">
 		<link rel="preload" href="/blog" as="fetch" crossorigin>
-		<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/ixjx/blog/gh-pages/favicon.ico">
+		<link rel="icon" type="image/png" href="/blog/favicon.ico">
 		<title itemprop="name">
 			CodeShurrik: Shell
 		</title>
