--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ if (!localStorage.getItem("up")) {
 let renderedStr = "Someting went wrong :-(<br>";
 
 function postList() {
-    renderedStr = 'Last 10 posts in my blog.<br>More in [CodeShurrik](<a target="_blank" rel="noopener" href="https://ixjx.github.io/blog">https://ixjx.github.io/blog</a>)<br>';
+    renderedStr = 'Last posts in my blog.<br>More in [CodeShurrik](<a target="_blank" rel="noopener" href="https://ixjx.github.io/blog">https://ixjx.github.io/blog</a>)<br>';
     $.ajax({
         url: "/blog/feed.xml",
         dataType: 'xml',
